--- a/docker_ubuntu/Dockerfile
+++ b/docker_ubuntu/Dockerfile
@@ -4,9 +4,7 @@ RUN apt update && apt upgrade -y
 
 RUN apt install -y vim net-tools openssh-server 
 
-CMD /usr/sbin/sshd -D
-
-RUN apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common
+RUN apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common iptables lxc
 
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg |  apt-key add -
 
@@ -16,7 +14,6 @@ RUN add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubunt
 
 RUN apt update
 
-RUN apt-get install -y docker-ce docker-ce-cli containerd.io
+RUN apt-get install -y docker-ce
 
-EXPOSE 22
-EXPOSE 2377
+VOLUME /var/lib/docker
